feat: Рефакторинг на микросервисную архитектуру
- Разделены backend и frontend на отдельные контейнеры
- Создан отдельный Dockerfile для frontend с Nginx
- Обновлен docker-compose.yml для микросервисной архитектуры
- Добавлена Docker bridge network для связи сервисов
- Настроен Nginx как reverse proxy для API запросов
- Обновлены URL в frontend для работы через proxy
- Создана документация ARCHITECTURE.md
- Backend: 221MB, Frontend: 79.4MB
- Улучшена безопасность и масштабируемость

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
-  yandex-search-app:
+  # Backend API сервис
+  backend:
     build: .
-    ports:
-      - "5000:5000"
+    container_name: yandex-search-backend
     environment:
       - FLASK_ENV=production
       - PYTHONUNBUFFERED=1
@@ -20,14 +20,27 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - yandex-network
 
-  # Опциональный nginx для статических файлов (если нужно)
-  nginx:
-    image: nginx:alpine
+  # Frontend сервис
+  frontend:
+    build: ./frontend
+    container_name: yandex-search-frontend
     ports:
       - "80:80"
-    volumes:
-      - ./frontend:/usr/share/nginx/html:ro
     depends_on:
-      - yandex-search-app
+      - backend
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    networks:
+      - yandex-network
+
+networks:
+  yandex-network:
+    driver: bridge
