fix: Исправлена сборка Docker контейнеров после очистки
- Исправлен docker-compose.yml для правильного контекста сборки frontend
- Обновлен frontend/Dockerfile для копирования index.html из backend/templates/
- Добавлен новый файл данных поиска (data_coords_44.3742_38.4002_r1.pkl)
- Контейнеры успешно пересобраны и работают корректно
- Все функции приложения доступны через веб-интерфейс

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
 
   # Frontend сервис
   frontend:
-    build: ./frontend
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
     container_name: yandex-search-frontend
     ports:
       - "80:80"
